fixed the alignment issues on pizza builder page

--- a/frontend/src/components/burger-builder/css/burger_table.css
+++ b/frontend/src/components/burger-builder/css/burger_table.css
@@ -1,4 +1,4 @@
-caption {
+/* caption {
   background: orange;
   padding: 1rem;
   font-size: 2rem;
@@ -9,4 +9,4 @@ caption {
 
 table {
   width: 40%;
-}
+} */
